--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,9 +5,9 @@
       <td class="mui--text-title">MadKing</td>
       <td align="right">
         <ul class="mui-list--inline mui--text-body2">
-          <li><a href="#">Recon</a></li>
+          <li><a href="/recon">Recon</a></li>
           <li><a href="#">Disrupt</a></li>
-          <li><a href="#">Attack</a></li>
+          <li><a href="#">Persist</a></li>
         </ul>
       </td>
     </tr>
