add token attack lib

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,8 +6,8 @@
       <td align="right">
         <ul class="mui-list--inline mui--text-body2">
           <li><a href="/recon">Recon</a></li>
-          <li><a href="#">Disrupt</a></li>
-          <li><a href="#">Persist</a></li>
+          <li><a href="/disrupt">Disrupt</a></li>
+          <li><a href="/persist">Persist</a></li>
         </ul>
       </td>
     </tr>
