--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,4 @@
 <div class="mui--text-display2">Welcome to MadKing AWS Attack Platform.</div>
 <br>
 <br>
-<button class="mui-btn mui-btn--raised">Burn them all?</button>
-
-{% endblock %}
+<a href="/burn/all" class="mui-btn mui-btn--raised">Burn them all?</a><br><br><br>{% endblock %}
