--- a/templates/recon.html
+++ b/templates/recon.html
@@ -46,8 +46,9 @@
         <tr>
           <td>{{ instance['instance_id'] }}</td>
           <td>{{ instance['public_ip_address'] }}</td>
-          <td><button class="mui-btn mui-btn--accent">Stop Instance</button></td>
+          <td><button class="mui-btn mui-btn--accent" onClick="parent.location='/stop/{{ instance['instance_id'] }}/{{ region }}'">Stop</button></td>
           <td><button class="mui-btn mui-btn--danger" onClick="parent.location='/burn/{{ instance['instance_id'] }}/{{ region }}'">Terminate</button></td>
+
         </tr>
       {% endfor %}
       </tbody>
