--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,9 +5,9 @@
       <td class="mui--text-title">MadKing</td>
       <td align="right">
         <ul class="mui-list--inline mui--text-body2">
-          <li><a href="/recon">Recon</a></li>
-          <li><a href="/disrupt">Disrupt</a></li>
-          <li><a href="/persist">Persist</a></li>
+          <li><a href="/production/recon">Recon</a></li>
+          <li><a href="/production/disrupt">Disrupt</a></li>
+          <li><a href="/production/persist">Persist</a></li>
         </ul>
       </td>
     </tr>
